# phoenix-vapi

./: .env.example  .gitignore  ARCHITECTURE.md  EVENT_REARCHITECTURE.md  FINAL_THRESHOLD_ADJUSTMENT.md  HELD_STILL_TO_STATIONARY_FIX.md  IMU_REFACTOR.md  README.md  app.py  calibrate_bno085.py  companion.py  config.py  debug_freefall.py  debug_freefall_optimized.py  debug_freefall_ultra_optimized.py  deploy_optimizations.sh  diagnose_timing.py  install.sh  main.py  pyproject.toml  raspberry_pi_audio_fix.md  reload.sh  requirements.txt  run.sh  stop.sh  test_freefall_priority.py  test_held_still_to_stationary.py  test_held_still_to_stationary_debug.py  test_oscillation_fix.py  test_shake_detection.py  test_state_detection.py  test_state_detection_comprehensive.py  test_state_detection_debug_verbose.py  test_stationary_fix.py
assets/models/: text-to-intent-rpi-18t.rhn  text-to-intent-rpi-18t_regular.rhn  text-to-intent-rpi.rhn  text-to-intent-rpi2.rhn  text-to-intent-rpi3.rhn  wake-word-mac.ppn  wake-word-rpi-18t.ppn  wake-word-rpi-magic-pea.ppn  wake-word-rpi2.ppn
data/: memories.json
docs/: ANTI_OSCILLATION_FIX.md  ARCHITECTURE.md  ARCHITECTURE_NEW.md  BNO085_OPTIMIZATION_README.md  EVENT_REARCHITECTURE.md  HELD_STILL_TO_STATIONARY_FIX_V2.md  OPTIMIZATION_SUMMARY.md  SHURLAND_TO_DO.md  STATE_DETECTION_IMPROVEMENTS.md  daily-sdk-reference.txt  magic-pea-rhino-intent-config-event.yml  magic-pea-rhino-intent-config.yml  optimized_audio_migration.md  optimized_audio_readme.md
phoenix/: __init__.py  main.py
phoenix/activities/: __init__.py  base.py
phoenix/core/: __init__.py  bus.py  config.py  events.py  registry.py  service.py  tracing.py
phoenix/events/: __init__.py  activities.py  sensors.py  system.py  voice.py
phoenix/hardware/: __init__.py  audio.py  base.py  led.py
phoenix/services/: __init__.py
scripts/: add_wifi.sh  calibrate_bno085.py  git_repair.sh  install-service.sh  install.sh  install_service.sh  precache_tts.py  setup_respeaker_only.sh  vapi_utils.py
src/: __init__.py  accelerometer_service.py  app.py  audio_control.py  call_manager.py  config.py  daily_call.py  example_wake_word.py  led_control.py  led_service.py  main.py  test_audio.py  test_audio_direct.py  test_call.py  test_wake_word.py  vapi.py  wake_word.py
src/activities/: call_activity.py  conversation_activity.py  grandma_pea_activity.py  hide_seek_activity.py  move_activity.py  planet_activity.py  play_music_activity.py  scavenger_hunt_activity.py  sleep_activity.py  squealing_activity.py
src/core/: CMakeLists.txt  __init__.py  audio_core.c  audio_core.cpp
src/examples/: server_manager_example.py
src/hardware/: acc_bno085.py  amp_pam8302a.py  respeaker.py  respeaker_led_bridge.py
src/managers/: README_ServerManager.md  accelerometer_manager.py  audio_manager.py  call_manager.py  conversation_manager.py  haptic_manager.py  led_manager.py  llm_intent_manager.py  location_manager.py  memory_manager.py  optimized_audio_manager.py  server_manager.py  speech_intent_manager.py  speech_manager.py  (+4 more)
tests/: debug_freefall_ultra_optimized.py  monitor_patterns.py  run_tests.py  test_accelerometer_manager.py  test_audio.py  test_haptic.py  test_leds.py  test_speech_service.py  test_voice_service.py
(+52 files in other folders)
