[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phoenix-ai-companion"
version = "1.0.0"
description = "A smart AI companion and toy for children"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Phoenix Team", email = "info@peace.com" }
]
keywords = ["voice", "assistant", "children", "toy", "raspberry-pi", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.20.0",
    "structlog>=23.1.0",
    "asyncio>=3.4.3",
    "aiofiles>=23.1.0",
    "aiohttp>=3.8.4",
]

[project.optional-dependencies]
# Platform-specific dependencies
raspberry-pi = [
    "RPi.GPIO>=0.7.0",
    "rpi-ws281x>=4.3.0",
    "pyalsaaudio>=0.9.0",
    "smbus2>=0.4.2",
]

macos = [
    "pyaudio>=0.2.13",
]

# Development dependencies
dev = [
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.2.0",
    "flake8>=6.0.0",
]

[project.urls]
"Homepage" = "https://github.com/phoenixassistant/phoenix-vapi"
"Bug Tracker" = "https://github.com/phoenixassistant/phoenix-vapi/issues"

[tool.setuptools.packages.find]
include = ["phoenix*"]
exclude = ["tests*", "build*", "dist*"]

[tool.black]
line-length = 88
target-version = ["py39", "py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto" 